@@ -103,8 +103,12 @@ int ll_cur_amm;
 int ll_max_amm;
 
 
-int main( int argc, char *argv[] )
-{
+int main( 
+
+  int   argc, 
+  char *argv[])
+
+  {
   /* Array for the log entries for the specified job */
   FILE *fp;
   int i, j;
@@ -133,13 +137,15 @@ int main( int argc, char *argv[] )
   excessive_count = EXCESSIVE_COUNT;
 #endif
 
-  while( ( c = getopt(argc, argv, "zvamslw:p:n:f:c:" ) ) != EOF )
-  {
-    switch(c)
+  while ((c = getopt(argc,argv,"zvamslw:p:n:f:c:")) != EOF)
     {
+    switch(c)
+      {
       case 'v':
+
 	verbose = 1;
-      break;
+
+        break;
 
       case 'a':
 	no_acct = 1;
@@ -218,12 +224,12 @@ int main( int argc, char *argv[] )
   }
 
 
-	       /* no jobs */
-  if( error || argc == optind )
-  {
-    printf(
-"USAGE: %s [-a|s|l|m|v] [-w size] [-p path] [-n days] [-f filter_type]\n", 
-		strip_path(argv[0]));
+  /* no jobs */
+
+  if (error || argc == optind)
+    {
+    printf("USAGE: %s [-a|s|l|m|v] [-w size] [-p path] [-n days] [-f filter_type]\n", 
+      strip_path(argv[0]));
 
     printf(
 "   -p : path to PBS_SERVER_HOME\n"
@@ -319,8 +325,14 @@ int main( int argc, char *argv[] )
  *	modifies global variables: loglines, ll_cur_amm, ll_max_amm
  *
  */
-void parse_log(FILE *fp, char *job, int ind)
-{
+
+void parse_log(
+
+  FILE *fp,   /* I */
+  char *job,  /* I */
+  int   ind)  /* I */
+
+  {
   struct log_entry tmp;	/* temporary log entry */
   char buf[4096];	/* buffer to read in from file */
   char *p;		/* pointer to use for strtok */
@@ -332,24 +344,31 @@ void parse_log(FILE *fp, char *job, int ind)
 
   tms.tm_isdst = -1;	/* mktime() will attempt to figure it out */
 
-  while( fgets(buf, sizeof(buf), fp) != NULL )
-  {
+  while (fgets(buf,sizeof(buf),fp) != NULL)
+    {
     lineno++;
     j++;
-    buf[strlen(buf)-1] = '\0';
-    p = strtok(buf, ";");
-    field_count = 0;
-    memset(&tmp, 0, sizeof(struct log_entry));
 
-    for(field_count = 0; field_count < 6 && p != NULL; field_count++)
-    {
-      switch(field_count)
+    buf[strlen(buf) - 1] = '\0';
+
+    p = strtok(buf,";");
+
+    field_count = 0;
+
+    memset(&tmp,0,sizeof(struct log_entry));
+
+    for (field_count = 0;(field_count < 6) && (p != NULL);field_count++)
       {
+      switch (field_count)
+        {
 	case FLD_DATE:
+
 	  tmp.date = p;
+
 	  if( ind == IND_ACCT )
 	    field_count = 2;
-	break;
+
+          break;
 
 	case FLD_EVENT:
 	  tmp.event = p;
@@ -372,21 +391,26 @@ void parse_log(FILE *fp, char *job, int ind)
 	break;
 
 	default:
+
 	  printf("Field count too big!\n");
 	  printf("%s\n", p);
-      }
+
+          break;
+        }
 
       p = strtok(NULL, ";");
-    }
+      }
 
-    if( tmp.name != NULL && strncmp(job, tmp.name, strlen(job) ) == 0 )
+  if ((tmp.name != NULL) && 
+      !strncmp(job,tmp.name,strlen(job)) &&
+      !isdigit(tmp.name[strlen(job)]))
     {
-      if( ll_cur_amm >= ll_max_amm )
-	alloc_more_space();
+    if (ll_cur_amm >= ll_max_amm)
+      alloc_more_space();
 
-      free_log_entry(&log_lines[ll_cur_amm]);
+    free_log_entry(&log_lines[ll_cur_amm]);
 
-      if( tmp.date != NULL )
+    if (tmp.date != NULL)
       {
         log_lines[ll_cur_amm].date = strdup(tmp.date);
 	if( sscanf( tmp.date, "%d/%d/%d %d:%d:%d", &tms.tm_mon, &tms.tm_mday, &tms.tm_year, &tms.tm_hour, &tms.tm_min, &tms.tm_sec) != 6 )
